syntax = "proto3";

package taskpb;

import "task.proto";

option go_package = "/taskpb";

message CreateTaskRequest {
    Task task = 1;
}

message CreateTaskResponse {
    string id = 1;
}

message FindTaskRequest {
    string id = 1;
    string userId = 2;
}

message FindTaskResponse {
    Task task = 1;
}

message ListTaskRequest {
    string userId = 1;
}

message ListTaskResponse {
    Task task = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string userId = 1;
}

message UploadImageRequest {
    string userId = 1;
    oneof data {
        ImageInfo info = 2;
        bytes chunck_data = 3;
    }
}

message ImageInfo {
    string task_id = 1;
    string image_type = 2;
}

message UploadResponse {
    string id = 1;
    uint32 size = 2;
}

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {};
    rpc FindTask(FindTaskRequest) returns (FindTaskResponse) {};
    rpc ListTasks(ListTaskRequest) returns (stream ListTaskResponse) {};
    rpc UploadImage(stream UploadImageRequest) returns (UploadResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
}